--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -13,4 +13,5 @@
     <string name="strMsgAp">Parabéns!</string>
     <string name="strMsgRc">Estude mais!</string>
     <string name="strMsgRp">Por favor, tente novamente ano que vem!</string>
+    <string name="msgErro">Digite um valor</string>
 </resources>
