--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="strMsgAp">Congratulations!</string>
     <string name="strMsgRc">Study more!</string>
     <string name="strMsgRp">Please, try again next year!</string>
+    <string name="msgErro">Type a number</string>
 </resources>
